# docs/swagger.yaml
@@ -7,11 +7,6 @@ definitions:
       name:
         type: string
     type: object
-  models.LabelStats:
-    properties:
-      questionNum:
-        type: integer
-    type: object
   models.PersonalInfo:
     properties:
       CEEPlace:
@@ -30,10 +25,37 @@ definitions:
         description: 高考科目
         type: string
     type: object
+  models.QuestionBoxLabel:
+    properties:
+      content:
+        type: string
+      createTime:
+        type: integer
+      id:
+        type: string
+      questions:
+        items:
+          $ref: '#/definitions/models.QuestionInLabelInfo'
+        type: array
+      updateTime:
+        type: integer
+      userID:
+        type: string
+    type: object
   models.QuestionBoxQuestion:
     properties:
       answers:
         description: 该问题下所有的回答
+        items:
+          type: string
+        type: array
+      askTags:
+        description: 该问题向带有哪些标签的用户提问
+        items:
+          type: string
+        type: array
+      askTo:
+        description: 该问题向谁提问
         items:
           type: string
         type: array
@@ -67,32 +89,9 @@ definitions:
     type: object
   models.QuestionInLabelInfo:
     properties:
-      hasRead:
-        type: boolean
       name:
         type: string
       questionID:
-        type: string
-    type: object
-  models.QuestionLabel:
-    properties:
-      content:
-        type: string
-      createTime:
-        type: integer
-      id:
-        type: string
-      questions:
-        items:
-          $ref: '#/definitions/models.QuestionInLabelInfo'
-        type: array
-      stats:
-        allOf:
-        - $ref: '#/definitions/models.LabelStats'
-        description: 问题标签相关的数据
-      updateTime:
-        type: integer
-      userID:
         type: string
     type: object
   svcerror.SvcErr:
@@ -103,19 +102,38 @@ definitions:
       msg:
         type: string
     type: object
+  types.DeleteLabelRes:
+    properties:
+      labelID:
+        type: string
+    type: object
+  types.GetLabelsFromQuestionReq:
+    properties:
+      questionID:
+        type: string
+    type: object
+  types.GetLabelsFromQuestionRes:
+    properties:
+      labels:
+        items:
+          $ref: '#/definitions/models.QuestionBoxLabel'
+        type: array
+    type: object
   types.GetLabelsFromUserRes:
     properties:
       labels:
         items:
-          $ref: '#/definitions/models.QuestionLabel'
+          $ref: '#/definitions/models.QuestionBoxLabel'
         type: array
     type: object
   types.NewLabelsReq:
     properties:
       labels:
         items:
-          $ref: '#/definitions/models.QuestionLabel'
+          $ref: '#/definitions/models.QuestionBoxLabel'
         type: array
+      question:
+        $ref: '#/definitions/models.QuestionBoxQuestion'
     type: object
   types.NewLabelsRes:
     properties:
@@ -126,6 +144,16 @@ definitions:
     type: object
   types.NewQuestionReq:
     properties:
+      askTo:
+        description: 该问题向谁提问
+        items:
+          type: string
+        type: array
+      astTags:
+        description: 该问题向带有哪些标签的用户提问
+        items:
+          type: string
+        type: array
       description:
         description: 问题描述
         type: string
@@ -165,6 +193,28 @@ definitions:
           $ref: '#/definitions/models.QuestionBoxQuestion'
         type: array
     type: object
+  types.ReadAnswerByUserReq:
+    properties:
+      answerID:
+        type: string
+    type: object
+  types.ReadAnswerByUserRes:
+    properties:
+      log:
+        type: boolean
+    type: object
+  types.UpdateLabelContentReq:
+    properties:
+      content:
+        type: string
+      labelID:
+        type: string
+    type: object
+  types.UpdateLabelContentRes:
+    properties:
+      labelID:
+        type: string
+    type: object
   types.UpdateQuestionDescriptionReq:
     properties:
       question:
@@ -198,6 +248,49 @@ info:
   title: UniPingo Backend
   version: 0.0.1
 paths:
+  /questionbox/label/content/update:
+    post:
+      description: 更新标签（文件夹）的标题（内容）
+      parameters:
+      - description: JWT Token
+        in: header
+        name: x-access-token
+        required: true
+        type: string
+      - description: 标签（文件夹）ID
+        in: query
+        name: page
+        required: true
+        type: string
+      - description: 标签（文件夹）更新内容请求
+        in: body
+        name: updateLabelContentReq
+        required: true
+        schema:
+          $ref: '#/definitions/types.UpdateLabelContentReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 标签（文件夹）更新响应
+          schema:
+            $ref: '#/definitions/types.UpdateLabelContentRes'
+        "400":
+          description: 请求格式问题
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+        "401":
+          description: 用户认证失败
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+        "500":
+          description: 服务器内部问题
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+      summary: 更新标签（文件夹）接口
+      tags:
+      - questionbox
+      - label
   /questionbox/label/new:
     post:
       description: 新建多个问题标签（文件夹）
@@ -235,6 +328,92 @@ paths:
       summary: 新建问题标签（文件夹）接口
       tags:
       - questionbox
+      - label
+  /questionbox/label/question/delete:
+    post:
+      description: 根据标签（文件夹）ID删除对应的标签（文件夹）
+      parameters:
+      - description: JWT Token
+        in: header
+        name: x-access-token
+        required: true
+        type: string
+      - description: 标签（文件夹）ID
+        in: query
+        name: page
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取问题对应标签（文件夹）响应
+          schema:
+            $ref: '#/definitions/types.DeleteLabelRes'
+        "400":
+          description: 请求格式问题
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+        "401":
+          description: 用户认证失败
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+        "500":
+          description: 服务器内部问题
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+      summary: 删除标签（文件夹）接口
+      tags:
+      - questionbox
+      - label
+  /questionbox/label/question/get:
+    post:
+      description: 根据当前问题获取对应的所有标签（文件夹）
+      parameters:
+      - description: JWT Token
+        in: header
+        name: x-access-token
+        required: true
+        type: string
+      - description: 标签（文件夹）页码
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 标签（文件夹）每页包含个数
+        in: query
+        name: pageNum
+        required: true
+        type: integer
+      - description: 所搜寻问题ID
+        in: body
+        name: getLabelsFromQuestionReq
+        required: true
+        schema:
+          $ref: '#/definitions/types.GetLabelsFromQuestionReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取问题对应标签（文件夹）响应
+          schema:
+            $ref: '#/definitions/types.GetLabelsFromQuestionRes'
+        "400":
+          description: 请求格式问题
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+        "401":
+          description: 用户认证失败
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+        "500":
+          description: 服务器内部问题
+          schema:
+            $ref: '#/definitions/svcerror.SvcErr'
+      summary: 根据问题获取标签（文件夹）接口
+      tags:
+      - questionbox
+      - label
   /questionbox/label/user/get:
     get:
       description: 根据当前用户获取当前用户的所有标签（文件夹）
@@ -314,6 +493,7 @@ paths:
       summary: 更新问题描述接口
       tags:
       - questionbox
+      - question
   /questionbox/question/list:
     get:
       description: 查询某用户的所有问题
@@ -355,6 +535,7 @@ paths:
       summary: 用户问题列表查询接口
       tags:
       - questionbox
+      - question
   /questionbox/question/major/update:
     post:
       description: 更新某问题的询问学校或专业
@@ -392,6 +573,7 @@ paths:
       summary: 更新问题学校或专业接口
       tags:
       - questionbox
+      - question
   /questionbox/question/new:
     post:
       consumes:
@@ -431,6 +613,7 @@ paths:
       summary: 新增一个问题
       tags:
       - questionbox
+      - question
   /questionbox/question/query:
     get:
       description: 根据ID查询一个问题
@@ -467,6 +650,7 @@ paths:
       summary: 问题ID查询接口
       tags:
       - questionbox
+      - question
   /questionbox/question/school/update:
     post:
       description: 更新某问题的询问学校或专业
@@ -504,6 +688,7 @@ paths:
       summary: 更新问题学校或专业接口
       tags:
       - questionbox
+      - question
 schemes:
 - https
 swagger: "2.0"
